Improve openapi specification
