# src/main/java/org/vitalii/fedyk/librarygenerated/controller/AuthorController.java
@@ -1,15 +1,13 @@
 package org.vitalii.fedyk.librarygenerated.controller;
 
 import lombok.AllArgsConstructor;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.web.bind.annotation.RestController;
 import org.vitalii.fedyk.librarygenerated.api.controller.AuthorsApi;
 import org.vitalii.fedyk.librarygenerated.api.dto.CreateAuthorDto;
 import org.vitalii.fedyk.librarygenerated.api.dto.ReadAuthorDto;
+import org.vitalii.fedyk.librarygenerated.api.dto.ReadAuthorsDto;
 import org.vitalii.fedyk.librarygenerated.service.AuthorService;
-
-import java.util.List;
 
 @RestController
 @AllArgsConstructor
@@ -27,7 +25,7 @@ public class AuthorController implements AuthorsApi {
     }
 
     @Override
-    public Page<ReadAuthorDto> getAllAuthors(Pageable pageable) {
+    public ReadAuthorsDto getAllAuthors(Pageable pageable) {
         return authorService.findAll(pageable);
     }
 
