# src/main/resources/openapi.yml
@@ -17,14 +17,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateUserDto"
+              $ref: "#/components/schemas/CreateUser"
       responses:
         '200':
           description: User successfully created
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ReadUserDto"
+                $ref: "#/components/schemas/ReadUser"
         '400':
           description: Invalid input data
           content:
@@ -49,10 +49,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ReadUserDtos"
-  /users/{id}:
+                $ref: "#/components/schemas/ReadUsers"
+  /users/{userId}:
     parameters:
-      - name: id
+      - name: userId
         required: true
         in: path
         description: Identifier of the user
@@ -70,7 +70,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadUserDto'
+                $ref: '#/components/schemas/ReadUser'
         '404':
           description: User not found
           content:
@@ -87,14 +87,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateUserDto"
+              $ref: "#/components/schemas/CreateUser"
       responses:
         '200':
           description: User successfully updated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadUserDto'
+                $ref: '#/components/schemas/ReadUser'
         '400':
           description: Invalid input data
           content:
@@ -147,7 +147,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadBorrowedBookDtos'
+                $ref: '#/components/schemas/ReadBorrowedBooks'
   /authors:
     post:
       summary: Create a new author
@@ -159,14 +159,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateAuthorDto'
+              $ref: '#/components/schemas/CreateAuthor'
       responses:
         '201':
           description: Author successfully created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadAuthorDto'
+                $ref: '#/components/schemas/ReadAuthor'
         '400':
           description: Invalid input data
           content:
@@ -185,10 +185,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PageOfAuthors'
-  /authors/{id}:
+                $ref: '#/components/schemas/ReadAuthors'
+  /authors/{authorId}:
     parameters:
-      - name: id
+      - name: authorId
         required: true
         in: path
         description: Identifier of the author
@@ -206,7 +206,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadAuthorDto'
+                $ref: '#/components/schemas/ReadAuthor'
         '404':
           description: Author not found
           content:
@@ -223,14 +223,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateAuthorDto"
+              $ref: "#/components/schemas/CreateAuthor"
       responses:
         '200':
           description: Author successfully updated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadAuthorDto'
+                $ref: '#/components/schemas/ReadAuthor'
         '400':
           description: Invalid input data
           content:
@@ -274,14 +274,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateBookDto'
+              $ref: '#/components/schemas/CreateBook'
       responses:
         '201':
           description: Book successfully created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadBookDto'
+                $ref: '#/components/schemas/ReadBook'
         '400':
           description: Invalid input data
           content:
@@ -310,10 +310,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadBookDtos'
-  /books/{id}:
+                $ref: '#/components/schemas/ReadBooks'
+  /books/{bookId}:
     parameters:
-      - name: id
+      - name: bookId
         required: true
         in: path
         description: Identifier of the book
@@ -332,7 +332,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadBookDto'
+                $ref: '#/components/schemas/ReadBook'
         '404':
           description: Author not found
           content:
@@ -349,14 +349,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateBookDto'
+              $ref: '#/components/schemas/CreateBook'
       responses:
         '200':
           description: Book successfully updated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadBookDto'
+                $ref: '#/components/schemas/ReadBook'
         '400':
           description: Invalid input data
           content:
@@ -400,14 +400,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateBorrowedBookDto'
+              $ref: '#/components/schemas/CreateBorrowedBook'
       responses:
         '201':
           description: "Borrowed book successfully created"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReadBorrowedBookDto'
+                $ref: '#/components/schemas/ReadBorrowedBook'
         '404':
           description: "Book or user doesn't exist"
           content:
@@ -454,6 +454,21 @@ paths:
                 $ref: '#/components/schemas/ExceptionMessage'
 components:
   schemas:
+    AuthorId:
+      type: integer
+      format: int64
+      example: 1
+      minimum: 1
+    BookId:
+      type: integer
+      format: int64
+      example: 1
+      minimum: 1
+    UserId:
+      type: integer
+      format: int64
+      example: 1
+      minimum: 1
     BookGenre:
       type: string
       enum:
@@ -485,13 +500,11 @@ components:
         lastName:
           type: string
           example: "Shevchenko"
-    ReadUserDto:
+    ReadUser:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
-          example: 1
+          $ref: '#/components/schemas/UserId'
         fullName:
           $ref: '#/components/schemas/FullName'
         email:
@@ -500,11 +513,16 @@ components:
         birthday:
           type: string
           example: "29.03.2001"
-    ReadUserDtos:
-      type: array
-      items:
-        $ref: "#/components/schemas/ReadUserDto"
-    CreateUserDto:
+    ReadUsers:
+      type: object
+      properties:
+        users:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReadUser'
+        pagination:
+          $ref: '#/components/schemas/Pagination'
+    CreateUser:
       type: object
       required:
         - fullName
@@ -525,7 +543,7 @@ components:
         birthday:
           type: string
           example: "29.03.2001"
-    CreateAuthorDto:
+    CreateAuthor:
       type: object
       required:
         - fullName
@@ -535,23 +553,25 @@ components:
         description:
           type: string
           maxLength: 300
-    ReadAuthorDto:
+    ReadAuthor:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
-          example: 1
-          minimum: 1
+          $ref: "#/components/schemas/AuthorId"
         fullName:
           $ref: "#/components/schemas/FullName"
         description:
           type: string
-    ReadAuthorDtos:
+    ReadAuthors:
       type: object
-      items:
-        $ref: "#/components/schemas/ReadAuthorDto"
-    CreateBookDto:
+      properties:
+        authors:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReadAuthor'
+        pagination:
+          $ref: '#/components/schemas/Pagination'
+    CreateBook:
       type: object
       required:
         - title
@@ -576,18 +596,12 @@ components:
           description: Number of pages in the book.
           example: 180
         authorId:
-          type: integer
-          format: int64
-          description: ID of the author of the book.
-          example: 1
-    ReadBookDto:
+          $ref: '#/components/schemas/AuthorId'
+    ReadBook:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
-          description: Unique identifier for the book.
-          example: 1
+          $ref: '#/components/schemas/BookId'
         title:
           type: string
           description: The title of the book.
@@ -605,16 +619,14 @@ components:
           description: Number of pages in the book.
           example: 180
         authorId:
-          type: string
-          description: ID of the author of the book. Can be a numeric or string identifier.
-          example: "1"
+          $ref: '#/components/schemas/AuthorId'
         authorFullName:
           $ref: '#/components/schemas/FullName'
-    ReadBookDtos:
+    ReadBooks:
       type: array
       items:
-        $ref: '#/components/schemas/ReadBookDto'
-    CreateBorrowedBookDto:
+        $ref: '#/components/schemas/ReadBook'
+    CreateBorrowedBook:
       type: object
       required:
         - bookId
@@ -622,30 +634,20 @@ components:
         - returnDate
       properties:
         bookId:
-          type: integer
-          format: int64
-          description: "The ID of the book being borrowed"
-          example: 1
-          minimum: 1
+          $ref: '#/components/schemas/BookId'
         userId:
-          type: integer
-          format: int64
-          description: "The ID of the user borrowing the book"
-          example: 67
-          minimum: 1
+          $ref: '#/components/schemas/UserId'
         returnDate:
           type: string
           description: "The date when the book should be returned. Must be in the future."
           example: "2025-12-31T23:59:59Z"
-    ReadBorrowedBookDto:
+    ReadBorrowedBook:
       type: object
       properties:
         book:
-          $ref: '#/components/schemas/ReadBookDto'
+          $ref: '#/components/schemas/ReadBook'
         userId:
-          type: integer
-          description: "The ID of the user who borrowed the book."
-          example: 2
+          $ref: '#/components/schemas/UserId'
         borrowDate:
           type: string
           format: date-time
@@ -656,66 +658,26 @@ components:
           format: date-time
           description: "The expected return date of the borrowed book."
           example: "2024-12-01T10:00:00Z"
-    ReadBorrowedBookDtos:
+    ReadBorrowedBooks:
       type: array
       items:
-        $ref: '#/components/schemas/ReadBorrowedBookDto'
-    BasePage:
+        $ref: '#/components/schemas/ReadBorrowedBook'
+    Pagination:
       type: object
       properties:
-        empty:
-          type: boolean
-        first:
-          type: boolean
-        last:
-          type: boolean
-        number:
+        pageNumber:
           type: integer
-        numberOfElements:
+          minimum: 0
+          example: 1
+        pageSize:
           type: integer
-        pageable:
-          type: object
-        size:
+          minimum: 1
+          maximum: 100
+          example: 10
+        totalNumberOfPages:
           type: integer
-        sort:
-          type: object
-        totalElements:
-          type: integer
-        totalPages:
-          type: integer
-      required:
-        - empty
-        - first
-        - last
-        - number
-        - numberOfElements
-        - pageable
-        - size
-        - sort
-        - totalElements
-        - totalPages
-    PageOfAuthors:
-      allOf:
-        - $ref: '#/components/schemas/BasePage'
-        - type: object
-          properties:
-            content:
-              type: array
-              items:
-                $ref: '#/components/schemas/ReadAuthorDto'
-          required:
-            - content
-    PageOfBooks:
-      allOf:
-        - $ref: '#/components/schemas/BasePage'
-        - type: object
-          properties:
-            content:
-              type: array
-              items:
-                $ref: '#/components/schemas/ReadBookDto'
-          required:
-            - content
+          minimum: 0
+          example: 1
     ExceptionMessage:
       type: object
       properties:
